trunk/Archive2/c2/55b3f5854bcb87/output
main.cpp: In function 'int main()':
main.cpp:40:12: error: 'void*' is not a pointer-to-object type
     (C*)sp1->foo();
            ^
